# dl-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.cloudpanel.yml  docker-compose.prod.yml  docker-compose.supabase.yml  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
deploy/: Caddyfile
docs/: DEPLOY.md  STATUS.md
eval/: questions.json
src/dl_rag/: __init__.py  config.py  constants.py  exceptions.py  logging_config.py  main.py  protocols.py
src/dl_rag/adapters/: __init__.py  knowledge_graph.py  sparse_retriever.py
src/dl_rag/api/: __init__.py  deps.py  errors.py  middleware.py  security.py
src/dl_rag/api/routers/: __init__.py  admin.py  chat.py  documents.py  feedback.py  index.py  system.py  ui.py
src/dl_rag/cache/: __init__.py  redis_cache.py
src/dl_rag/db/: __init__.py  database.py  orm.py
src/dl_rag/embeddings/: __init__.py  embedder.py
src/dl_rag/evaluation/: __init__.py  evaluator.py  metrics.py  run.py
src/dl_rag/generation/: __init__.py  answer_generator.py  citations.py  llm_client.py  prompts.py
src/dl_rag/ingestion/: __init__.py  pipeline.py
src/dl_rag/ingestion/chunking/: __init__.py  semantic_chunker.py
src/dl_rag/ingestion/crawler/: __init__.py  extractors.py  markdown.py  robots.py  wordpress.py
src/dl_rag/ingestion/entities/: __init__.py  extractor.py
src/dl_rag/ingestion/ocr/: __init__.py  pdf_processor.py
src/dl_rag/ingestion/youtube/: __init__.py  catalog.py  documents.py  transcripts.py
src/dl_rag/knowledge_graph/: __init__.py  builder.py
src/dl_rag/memory/: __init__.py  conversation_memory.py
src/dl_rag/models/: __init__.py  api.py  domain.py  enums.py
src/dl_rag/observability/: __init__.py  metrics.py
src/dl_rag/repositories/: __init__.py  base.py  chunk_repository.py  document_repository.py  feedback_repository.py  kg_repository.py
src/dl_rag/retrieval/: __init__.py  compression.py  dense.py  fusion.py  hybrid_retriever.py  query_understanding.py  reranker.py
src/dl_rag/scripts/: __init__.py  run_crawl.py  run_import_supabase.py  run_ingest.py  run_ingest_youtube.py  run_kg_extract.py  run_rebuild_qdrant.py
src/dl_rag/services/: __init__.py  admin_service.py  chat_service.py  ingestion_service.py
src/dl_rag/utils/: __init__.py  text.py  tokens.py
src/dl_rag/vectorstore/: __init__.py  qdrant_store.py
tests/: conftest.py
tests/integration/: test_live_stack.py
tests/unit/: test_api_offline.py  test_evaluation_metrics.py  test_generation.py  test_ingestion.py  test_memory.py  test_query_understanding.py  test_retrieval_components.py  test_security_and_middleware.py  test_utils.py  test_youtube.py
