[tool.poetry]
name = "dl-rag"
version = "0.1.0"
description = "Production-grade Retrieval-Augmented Generation API over the digitalLEARNING archive (2005–present)."
authors = ["digitalLEARNING Engineering <engineering@digitallearning.in>"]
readme = "README.md"
license = "Proprietary"
packages = [{ include = "dl_rag", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# --- Web / API ---
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
sse-starlette = "^2.1.3"
python-multipart = "^0.0.12"

# --- Data stores ---
sqlalchemy = { extras = ["asyncio"], version = "^2.0.36" }
asyncpg = "^0.30.0"
alembic = "^1.14.0"
qdrant-client = "^1.12.0"
redis = { extras = ["hiredis"], version = "^5.2.0" }

# --- ML / retrieval ---
sentence-transformers = "^3.3.0"
torch = "^2.5.0"
rank-bm25 = "^0.2.2"
numpy = "^1.26.4"

# --- LLM ---
openai = "^1.54.0"
tiktoken = "^0.8.0"

# --- Ingestion ---
httpx = "^0.27.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
trafilatura = "^1.12.2"
markdownify = "^0.13.1"
python-dateutil = "^2.9.0"

# --- OCR / PDF (optional heavy deps guarded at import time) ---
pypdf = "^5.1.0"
pdfplumber = "^0.11.4"

# --- YouTube ingestion ---
yt-dlp = ">=2025.1.1"
youtube-transcript-api = "^1.2.0"

# --- Observability / resilience ---
structlog = "^24.4.0"
prometheus-client = "^0.21.0"
tenacity = "^9.0.0"
orjson = "^3.10.11"

[tool.poetry.group.ocr.dependencies]
# Install with `poetry install --with ocr` — requires the `tesseract` and `poppler` system binaries.
pytesseract = "^0.3.13"
pdf2image = "^1.17.0"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
respx = "^0.21.1"
fakeredis = "^2.26.1"
ruff = "^0.7.0"
mypy = "^1.13.0"
types-python-dateutil = "^2.9.0"

[tool.poetry.scripts]
dl-crawl = "dl_rag.scripts.run_crawl:main"
dl-ingest = "dl_rag.scripts.run_ingest:main"
dl-kg-extract = "dl_rag.scripts.run_kg_extract:main"
dl-ingest-youtube = "dl_rag.scripts.run_ingest_youtube:main"
dl-import-supabase = "dl_rag.scripts.run_import_supabase:main"
dl-rebuild-qdrant = "dl_rag.scripts.run_rebuild_qdrant:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "ASYNC"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic.

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: tests that require live services (postgres/redis/qdrant).",
]
